[gd_scene load_steps=37 format=3 uid="uid://ba31p2dpjbrco"]

[ext_resource type="Texture2D" uid="uid://dpoj7qu6ku00k" path="res://shop/shop2/shop1.png" id="1_qt6t8"]
[ext_resource type="Script" path="res://shop/shop_2.gd" id="1_wqdt1"]
[ext_resource type="Texture2D" uid="uid://b1o052lvpmyn6" path="res://shop/shop2/shop2.png" id="2_qamwi"]
[ext_resource type="Texture2D" uid="uid://uptqll75jqyh" path="res://shop/shop2/shop3.png" id="3_gb07r"]
[ext_resource type="Texture2D" uid="uid://bxhhn6mppx8yi" path="res://shop/shop2/shop4.png" id="4_x2nww"]
[ext_resource type="Texture2D" uid="uid://ndq1xvtbjqix" path="res://shop/shop2/shop5.png" id="5_7rws0"]
[ext_resource type="Texture2D" uid="uid://clc3s06nu4an6" path="res://shop/shop2/shop6.png" id="6_yxook"]
[ext_resource type="Texture2D" uid="uid://bfb8rly7mq5mf" path="res://shop/shop2/shop7.png" id="7_e5etg"]
[ext_resource type="Texture2D" uid="uid://eebo1hswqcoo" path="res://shop/shop2/shop8.png" id="8_qbx0n"]
[ext_resource type="Texture2D" uid="uid://csvpmd22afin7" path="res://art/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Soldier/Soldier/Soldier-Idle.png" id="9_f5vx2"]
[ext_resource type="Texture2D" uid="uid://nri5sk1coo08" path="res://battle_scene/art/textbox_1.png" id="11_kxy0u"]
[ext_resource type="Texture2D" uid="uid://bspkj7kqc20f5" path="res://map_stuff/map_tutorial_stuff/art/map_icons/coins.png" id="12_j8am3"]
[ext_resource type="Texture2D" uid="uid://b5n8og57u1wm1" path="res://shop/shop2/diceinven.png" id="13_01uwu"]
[ext_resource type="PackedScene" uid="uid://fe8ac0h8ymr3" path="res://dice_roller/dice_roller.tscn" id="14_f73h6"]
[ext_resource type="Script" path="res://shop/shop2/dice_roller_shop.gd" id="15_s5nhf"]
[ext_resource type="PackedScene" uid="uid://dvp7taojqckg3" path="res://shop/shop2/shop_dice.tscn" id="16_yhb85"]
[ext_resource type="Script" path="res://shop/return_controller.gd" id="17_1qtjl"]
[ext_resource type="AudioStream" uid="uid://c28646a3rbkck" path="res://music/Sketchbook 2024-03-20_01.ogg" id="18_ofmmw"]
[ext_resource type="AudioStream" uid="uid://bdx5k4niwfsim" path="res://music/8bit-coin-sound-effect.mp3" id="19_cknvl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u45qf"]
atlas = ExtResource("1_qt6t8")
region = Rect2(0, 0, 188, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxgew"]
atlas = ExtResource("2_qamwi")
region = Rect2(0, 0, 188, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltpp2"]
atlas = ExtResource("3_gb07r")
region = Rect2(0, 0, 188, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m0jy"]
atlas = ExtResource("4_x2nww")
region = Rect2(0, 0, 188, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkmi6"]
atlas = ExtResource("5_7rws0")
region = Rect2(0, 0, 188, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bxig"]
atlas = ExtResource("6_yxook")
region = Rect2(0, 0, 188, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdxjv"]
atlas = ExtResource("7_e5etg")
region = Rect2(0, 0, 188, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_qglba"]
atlas = ExtResource("8_qbx0n")
region = Rect2(0, 0, 188, 125)

[sub_resource type="SpriteFrames" id="SpriteFrames_4o5jp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u45qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxgew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltpp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m0jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkmi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bxig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdxjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qglba")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_343bq"]
atlas = ExtResource("9_f5vx2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccsc5"]
atlas = ExtResource("9_f5vx2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jteab"]
atlas = ExtResource("9_f5vx2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_discg"]
atlas = ExtResource("9_f5vx2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8bw3"]
atlas = ExtResource("9_f5vx2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ru68"]
atlas = ExtResource("9_f5vx2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_s5ixm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_343bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccsc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jteab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_discg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8bw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ru68")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SystemFont" id="SystemFont_4o23x"]
subpixel_positioning = 0

[node name="Shop2" type="Node2D"]
script = ExtResource("1_wqdt1")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(573, 285)
scale = Vector2(6.182, 6.182)
sprite_frames = SubResource("SpriteFrames_4o5jp")
autoplay = "default"
frame_progress = 0.532864

[node name="Player" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.8, 0.75, 1)
position = Vector2(140, 567)
scale = Vector2(8.975, 8.975)
sprite_frames = SubResource("SpriteFrames_s5ixm")
autoplay = "default"

[node name="PlayerCoins" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="PlayerCoins"]
position = Vector2(362, 535)
scale = Vector2(3.89844, 2.76563)
texture = ExtResource("11_kxy0u")

[node name="Label" type="Label" parent="PlayerCoins"]
offset_left = 232.0
offset_top = 593.0
offset_right = 274.0
offset_bottom = 609.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Coins"

[node name="Coin" type="Sprite2D" parent="PlayerCoins"]
position = Vector2(217, 600)
scale = Vector2(1.875, 1.875)
texture = ExtResource("12_j8am3")

[node name="Background2" type="Sprite2D" parent="PlayerCoins"]
position = Vector2(1074.13, 329.5)
scale = Vector2(4.89258, 3.39844)
texture = ExtResource("11_kxy0u")

[node name="Label2" type="Label" parent="PlayerCoins"]
offset_left = 876.125
offset_top = 393.5
offset_right = 1009.13
offset_bottom = 428.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Inventory
Click To Sell"
horizontal_alignment = 1

[node name="PlayerInventory" type="Node2D" parent="."]
position = Vector2(0, -7)

[node name="Sprite2D" type="Sprite2D" parent="PlayerInventory"]
position = Vector2(1093, 345)
scale = Vector2(6.64063, 6.64063)
texture = ExtResource("13_01uwu")

[node name="Dice Roller" parent="PlayerInventory" instance=ExtResource("14_f73h6")]
position = Vector2(88.9999, 1109)
scale = Vector2(0.755, 0.755)
script = ExtResource("15_s5nhf")

[node name="DiceBG" type="Node2D" parent="."]
position = Vector2(0, -7)

[node name="Marker2D" type="Marker2D" parent="DiceBG"]
position = Vector2(844, 568)

[node name="Marker2D2" type="Marker2D" parent="DiceBG"]
position = Vector2(890, 568)

[node name="Marker2D3" type="Marker2D" parent="DiceBG"]
position = Vector2(937, 568)

[node name="Marker2D4" type="Marker2D" parent="DiceBG"]
position = Vector2(984, 568)

[node name="Marker2D5" type="Marker2D" parent="DiceBG"]
position = Vector2(1030, 568)

[node name="Marker2D6" type="Marker2D" parent="DiceBG"]
position = Vector2(1030, 494)

[node name="Marker2D7" type="Marker2D" parent="DiceBG"]
position = Vector2(984, 494)

[node name="Marker2D8" type="Marker2D" parent="DiceBG"]
position = Vector2(937, 495)

[node name="Marker2D9" type="Marker2D" parent="DiceBG"]
position = Vector2(890, 495)

[node name="Marker2D10" type="Marker2D" parent="DiceBG"]
position = Vector2(843, 494)

[node name="DiceToBuy" type="Node2D" parent="."]

[node name="ShopDice" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(-327, -197)

[node name="ShopDice2" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(-177, -197)

[node name="ShopDice3" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(-27, -197)

[node name="ShopDice4" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(123, -197)

[node name="ShopDice5" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(273, -197)

[node name="ShopDice6" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(-327, -30)

[node name="ShopDice7" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(-177, -30)

[node name="ShopDice8" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(-27, -30)

[node name="ShopDice9" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(123, -30)

[node name="ShopDice10" parent="DiceToBuy" instance=ExtResource("16_yhb85")]
position = Vector2(273, -30)

[node name="ReturnController" type="Node2D" parent="."]
position = Vector2(51, -29)
script = ExtResource("17_1qtjl")

[node name="ReturnToMapButton" type="Button" parent="ReturnController"]
modulate = Color(1, 1, 1, 0)
offset_left = 432.0
offset_top = 594.0
offset_right = 551.0
offset_bottom = 653.0
theme_override_fonts/font = SubResource("SystemFont_4o23x")
text = "Return to Map"
metadata/_edit_use_anchors_ = true

[node name="Texture" type="Sprite2D" parent="ReturnController"]
position = Vector2(487, 627)
scale = Vector2(2.989, 2.303)
texture = ExtResource("11_kxy0u")
offset = Vector2(27.3, -23.87)

[node name="Return" type="Label" parent="ReturnController"]
offset_left = 401.0
offset_top = 605.0
offset_right = 574.0
offset_bottom = 649.0
scale = Vector2(1.275, 1.275)
pivot_offset = Vector2(85.38, 20.035)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_ofmmw")
pitch_scale = 2.02
autoplay = true

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_cknvl")
pitch_scale = 2.18

[connection signal="mouse_entered" from="ReturnController/ReturnToMapButton" to="." method="_on_return_to_map_button_mouse_entered"]
[connection signal="mouse_entered" from="ReturnController/ReturnToMapButton" to="ReturnController" method="_on_return_to_map_button_mouse_entered"]
[connection signal="mouse_entered" from="ReturnController/ReturnToMapButton" to="ReturnController/ReturnToMapButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ReturnController/ReturnToMapButton" to="." method="_on_return_to_map_button_mouse_exited"]
[connection signal="mouse_exited" from="ReturnController/ReturnToMapButton" to="ReturnController/ReturnToMapButton" method="_on_mouse_exited"]
[connection signal="pressed" from="ReturnController/ReturnToMapButton" to="." method="_on_return_to_map_button_pressed"]
